# libego

./: .gitignore  .gitmodules  .hgtags  Board.cpp  Board.h  BoardScene.cpp  BoardScene.h  BoardView.cpp  CMakeLists.txt  COPYING  Field.cpp  Field.h  GoGui.pro  Grid.cpp  Grid.h  HexBoard.cpp  HexBoard.h  HexField.h  HexGrid.cpp  Makefile  Makefile.Debug  Makefile.Release  README  README.markdown  SConscript  SConstruct  SquareBoard.cpp  SquareBoard.h  SquareField.cpp  SquareField.h  SquareGrid.cpp  SquareGrid.h  TODO  automagic.gtp  basic_go_types.cpp  benchmark.cpp  benchmark.h  board.cpp  build_debug.sh  build_release.sh  (+42 more)
cgos/: cgos.configure.sh  cgosGtp.tcl  play_at_cgos.sh
cgos/client/: cgosGtp.tcl
cmake/modules/: AddBoostCxxTest.cmake  EnsureOutOfSourceBuild.cmake
ego/: CMakeLists.txt  SConscript  basic_gtp.cpp  basic_gtp.h  benchmark.cpp  benchmark.h  board.cpp  board.h  color.cpp  color.h  config.h  ego.cpp  ego.h  fast_map.h  fast_pool.h  fast_random.cpp  fast_random.h  fast_stack.h  fast_timer.cpp  fast_timer.h  full_board.cpp  full_board.h  genmove_gtp.h  gtp.cpp  gtp.h  hash.h  move.h  player.cpp  player.h  playout.cpp  playout.h  sgf.cpp  sgf.h  sgf_gtp.cpp  sgf_gtp.h  testing.h  utils.cpp  utils.h  vertex.cpp  vertex.h
engine/: mcts_tree.h
example/: CMakeLists.txt  SConscript  experiments.cpp  fast_tree.h  genmove.cpp  gtp_sgf.cpp  main.cpp  mcts.cpp  mcts_gtp.cpp  mcts_params.cpp  mcts_tree.h  playout_gfx.cpp  stat.h  uct.cpp
gui_example/: CMakeLists.txt  gogui.cpp  manager.cpp
libego/: CMakeLists.txt  benchmark.h  color.cpp  ego.cpp  fast_random.h  fast_stack.h  fast_timer.cpp  full_board.cpp  full_board.h  gfx.h  move.cpp  player.cpp  sgf_gtp.cpp  sgf_gtp.h  utils.cpp
libgamegui/: CMakeLists.txt  Field.cpp  Field.h  GameScene.cpp  GameScene.h  SquareGrid.h
libgogui/: BoardScene.cpp  BoardScene.h  BoardView.cpp  BoardView.h  CMakeLists.txt  Field.cpp  Field.h  Grid.cpp  Grid.h  HavannahGrid.cpp  HavannahGrid.h  HexBoard.cpp  HexBoard.h  HexField.cpp  HexField.h  HexGrid.cpp  HexGrid.h  HoGrid.cpp  HoGrid.h  Ruler.cpp  Ruler.h  SquareBoard.cpp  SquareBoard.h  SquareField.cpp  SquareField.h  SquareGrid.cpp  SquareGrid.h  YGrid.cpp  YGrid.h
libgtp/: CMakeLists.txt  gtp.cpp  gtp.h  gtp_gogui.cpp  gtp_gogui.h  gtp_gogui_test.cpp  gtp_test.cpp
positions/: empty.9x9
problems/: ld_difficult
regression/: board_test.sh
scripts/: config.gtp  d2gtp.example.gtp  d2gtp.schema.sql  d2gtp.sql  experiment.d2g  fuego_config.gtp  libego_config.gtp  setup.d2g  setup_d2gtp.gtp  setup_distributed_twogtp.gtp  test.gtp
source/: CMakeLists.txt  mm_preprocess_sgf.py
source/.unused/: experiments.cpp  model.hpp  sgf.hpp
source/.unused/distributed_twogtp/: CMakeLists.txt  admin.cpp  admin.hpp  d2g-admin.cpp  gtp_process.hpp  worker.cpp  worker.hpp
source/.unused/distributed_twogtp/remi/: CBAST.h  CMakeLists.txt
source/cmake/modules/: EnsureBuildTypeIsChosen.cmake  SetCxxFlags.cmake  SetDefaultInstallationDirs.cmake  SetStrongCxxFlags.cmake
source/distributed_twogtp/: CMakeLists.txt  admin.cpp  admin.hpp  d2g-worker.cpp  database.cpp  database.hpp  gtp_process.cpp  gtp_process.hpp  main.cpp  mysql.schema  worker.cpp
source/distributed_twogtp/remi/: CBAST.cpp
source/engine/: CMakeLists.txt  all_hash3x3.hpp  engine.cpp  engine.hpp  experiments.cpp  logger.cpp  logger.h  main.cpp  mcts.cpp  mcts_engine.h  mcts_engine.hpp  mcts_gtp.cpp  mcts_gtp.h  mcts_gtp.hpp  mcts_mcmc.hpp  mcts_playout.cpp  mcts_playout.h  mcts_playout.hpp  mcts_tree.cpp  mcts_tree.h  mcts_tree.hpp  mm.hpp  mm_train.hpp  model.hpp  param.cpp  param.hpp  playout_gfx.cpp  sgf.cpp  sgf.h  sgf_gtp.cpp  sgf_gtp.h  sgf_gtp.hpp  stat.h  stat.hpp  time_control.cpp  time_control.hpp
source/example/: CMakeLists.txt  main.cpp
source/goboard/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  board.cpp  board.hpp  color.cpp  config.hpp  dir.hpp  ego.cpp  ego.hpp  gammas.hpp  hash.hpp  move.hpp  player.cpp  player.hpp  playout_test.cpp  playout_test.hpp  sampler.hpp  vertex.cpp  vertex.hpp
source/gtp/: CMakeLists.txt  gtp.cpp  gtp.hpp  gtp_gogui.cpp  gtp_gogui.hpp  gtp_gogui_test.cpp  gtp_test.cpp
source/gui/: CMakeLists.txt  game_inc.cpp  game_inc.h  gogui.cpp  gogui.h  gui.cpp  gui.h  main.cpp  manager.cpp  manager.h
source/libego/: CMakeLists.txt  basic_gtp.cpp  benchmark.cpp  benchmark.h  board.cpp  board.h  board.hpp  color.cpp  color.h  color.hpp  config.h  config.hpp  ego.cpp  ego.h  ego.hpp  fast_map.h  fast_pool.h  fast_pool.hpp  fast_random.cpp  fast_random.h  fast_random.hpp  fast_stack.h  fast_stack.hpp  fast_timer.cpp  fast_timer.h  fast_timer.hpp  full_board.cpp  full_board.h  full_board.hpp  gfx.cpp  hash.cpp  hash.h  hash.hpp  move.cpp  move.h  move.hpp  player-inl.h  player-inl.hpp  player.cpp  player.h  (+12 more)
source/libgamegui/: CMakeLists.txt  Field.cpp  GameScene.cpp  GameScene.h  Grid.cpp  HavannahGrid.cpp  HoGrid.cpp  HoGrid.h  ResizableView.cpp  ResizableView.h  Ruler.h  SquareGrid.cpp  SquareGrid.h  YGrid.cpp  YGrid.h  images.qrc
source/libgtp/: CMakeLists.txt  gtp.cpp  gtp.h  gtp.hpp  gtp_gogui.cpp  gtp_gogui.h  gtp_gogui_test.cpp  gtp_test.cpp
source/main/: CMakeLists.txt  main.cpp  mm_train.hpp
source/utils/: CMakeLists.txt  fast_pool.hpp  fast_random.cpp  fast_random.hpp  fast_stack.hpp  fast_timer.cpp  fast_timer.hpp  logger.cpp  logger.hpp  nat-inl.h  nat-inl.hpp  nat.h  nat.hpp  test.cpp  test.hpp  to_string.hpp  uint.h  uint.hpp  utils.hpp
stuff/twogtp/: tournament_with_gnugo
test/: CMakeLists.txt  gogui.cpp  gogui.h  main.cpp  manager.cpp  manager.h
test/positions/: sansan
twogtp/: libego-vs-gnugo.sh  play.sh  tournament_with_self
twogtp/students/: client.py  for_each_lab_comp.sh  list_workers.py  run_slaves.sh  screen_worker.sh  server.py  worker.py
vs2010/: Go.sln  Go.vcxproj  Go.vcxproj.filters
